# affinity-nix

./: .coderabbit.yaml  .gitignore  .yamllint.yaml  Cargo.toml  Justfile  README.md  default.nix  desktopItems.nix  flake.nix  garnix.yaml  lazySource.nix  output.pbm  overlay.nix  scripts.nix  source.nix  symlink.nix  typos.toml  wrap.nix  wrapWithPrefix.nix
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: appimage.yml  autofix.yml  build.yml  test.yml  update.yml
crates/runner/: Cargo.toml
crates/runner/src/: check.rs  flatpak.rs  main.rs  migrate.rs
grab/: grab.ts  package-lock.json  package.json
nix/: fmt.nix  hooks.nix  shells.nix
tests/: default.nix  pyproject.toml  v2.py  v3-test-file.af  v3.py
winmetadata/: Windows.Storage.winmd  Windows.System.winmd
