[package]
name = "runner"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
duct = "1.1.1"
nix = { version = "0.31.2", features = ["sched", "mount"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
xdgdir = "0.8.0"

[features]
v3 = []
